@@ -2,15 +2,11 @@ require 'rubygems'
 
 module Gem::RequirePathsBuilder
   def write_require_paths_file_if_needed(spec = @spec, gem_home = @gem_home)
-    return if spec.require_paths == ["lib"] &&
-              (spec.bindir.nil? || spec.bindir == "bin")
-    file_name = File.join(gem_home, 'gems', "#{@spec.full_name}", ".require_paths")
-    file_name.untaint
-    File.open(file_name, "w") do |file|
-      spec.require_paths.each do |path|
-        file.puts path
-      end
-      file.puts spec.bindir if spec.bindir
+    require_paths = spec.require_paths
+    return if require_paths.size == 1 and require_paths.first == "lib"
+    file_name = "#{gem_home}/gems/#{@spec.full_name}/.require_paths".untaint
+    File.open(file_name, "wb") do |file|
+      file.puts require_paths
     end
   end
 end
